  + Added define-macro

- ?/??/????, Phase Three of the Module System
  * Renamed the export special form to module.
  * Modified compile to analyze the source for top level export statements --
    top level defines that define identifiers that are not exported will
    not be mapped into the global namespace.
  * Made inner-defines forward looking in namespace.
  * Fixed typo in type->string
  * Altered REPL to insert an export for all variables bound in the
    expression.
  * Added parent-type primitive.
  * Added direct-type primitive.

- 2/14/2006, Buffered Read / Write
  * Added the buffer primitive type.
  * Added the (make-buffer size) primitive to core.
  * Added the (buffer? value) primitive to core.
  * Added the (buffer-length buffer) primitive to core.
  * Added the (write-buffer buffer string) primitive to core.
  * Added the (read-buffer buffer ?max) primitive to core.
  * Added the (buffer->string buffer) primitive to core.
  * Added the (write-buffer-byte buffer byte) primitive to core.
  * Added the (write-buffer-word buffer word) primitive to core.
  * Added the (write-buffer-quad buffer quad) primitive to core.
  * Added the (read-buffer-byte buffer) primitive to core.
  * Added the (read-buffer-word buffer) primitive to core.
  * Added the (read-buffer-quad buffer) primitive to core.
  * Altered string-port to use buffers.
  * Added the re-error primitive to permit guard clauses to repeat an error
    without altering the error's context.
  * Altered with-input-port and with-output-port macros to use guards to ensure
    that the ports are restored.
  * Added the buffer-output macro, which wraps all writes into a string port,
    then outputs the resulting buffer to the output port on completion.
  * Altered traceback to buffer-output.

- 2/09/2006, Cosmetic Improvements
  * repl now correctly responds to the closure of its input port.
  * when multimethods are bound to global names, any anonymous closures